samples/_failures_safe/1761271205_1c88c6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fd766942.c: In function ‘main’:
./samples/SAFE/__tmp_fd766942.c:146:5: error: expected expression at end of input
  146 |     if (!buffer_init(&decompressed,
      |     ^~
./samples/SAFE/__tmp_fd766942.c:146:5: error: expected declaration or statement at end of input
